// Original file: ../ticketing/ent/proto/entpb/entpb.proto

import type { ConcertSession as _entpb_ConcertSession, ConcertSession__Output as _entpb_ConcertSession__Output } from '../entpb/ConcertSession';

export interface BatchCreateConcertSessionsResponse {
  'concertSessions'?: (_entpb_ConcertSession)[];
}

export interface BatchCreateConcertSessionsResponse__Output {
  'concertSessions'?: (_entpb_ConcertSession__Output)[];
}
